fix bug on spacing between password-confirmation input and create user button on Sign Up

--- a/chronos-frontend/src/stylesheets/index.css
+++ b/chronos-frontend/src/stylesheets/index.css
@@ -76,6 +76,7 @@ body {
     background-color: #0000CD;
     color: #FFF;
     width: 315px;
+    margin-top: 10px;
 }
 
 .button, .input, #position {
